clusters/base/databases/crate/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crate
  namespace: databases
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 4200
      targetPort: 4200
    - name: postgres
      port: 5432
      targetPort: 5432
  selector:
    app: crate
